Charts added in WeatherPy

--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -1322,6 +1322,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# WeatherPy Charts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
